--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,6 +3,6 @@
     <string name="btn1_text">Start HTTP Server</string>
     <string name="btn2_text">Stop HTTP Server</string>
     <string name="camera_activity_btn_text">Camera Activity</string>
-    <string name="make_picture_btn_text">Start capture</string>
-    <string name="stop_picture_btn_text">Stop capture</string>
+    <string name="make_picture_btn_text">Start stream</string>
+    <string name="stop_picture_btn_text">Stop stream</string>
 </resources>
